packages/skia/lib/geometry/native.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:skia/src/asset.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Pointer<Cubic2>, ffi.Pointer<Intersection>)>()
external int cubic_intersect(
  ffi.Pointer<Cubic2> a,
  ffi.Pointer<Cubic2> b,
  ffi.Pointer<Intersection> out_hits,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Pointer<Circle2>, ffi.Pointer<Intersection>)>()
external int cubic_circle_intersect(
  ffi.Pointer<Cubic2> a,
  ffi.Pointer<Circle2> b,
  ffi.Pointer<Intersection> out_hits,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Pointer<Intersection>)>()
external int cubic_self_intersect(
  ffi.Pointer<Cubic2> a,
  ffi.Pointer<Intersection> out_hit,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<Cubic2>, ffi.Pointer<Aabb2>)>()
external void cubic_bbox_tight(
  ffi.Pointer<Cubic2> a,
  ffi.Pointer<Aabb2> out_bbox,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<Cubic2>)>()
external double cubic_arc_length(
  ffi.Pointer<Cubic2> a,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Double, ffi.Pointer<Vector2>, ffi.Pointer<Vector2>)>()
external int cubic_pos_tan_at_distance(
  ffi.Pointer<Cubic2> a,
  double distance,
  ffi.Pointer<Vector2> out_pos,
  ffi.Pointer<Vector2> out_tan,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Pointer<ffi.Double>)>()
external int cubic_find_inflections(
  ffi.Pointer<Cubic2> a,
  ffi.Pointer<ffi.Double> out,
);

@ffi.Native<
  ffi.Int Function(ffi.Pointer<Cubic2>, ffi.Float, ffi.Pointer<Quadratic2>, ffi.Pointer<ffi.Double>, ffi.Bool)
>()
external int cubic_to_quads(
  ffi.Pointer<Cubic2> a,
  double tolerance,
  ffi.Pointer<Quadratic2> out_quads,
  ffi.Pointer<ffi.Double> out_t,
  bool chop_at_inflections,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<InputPoint>, ffi.Size, ffi.Double)>()
external int cull_noisy_points(
  ffi.Pointer<InputPoint> points,
  int count,
  double spatial_tolerance,
);

@ffi.Native<CubicSpline2 Function(ffi.Pointer<InputPoint>, ffi.Size, ffi.Double, ffi.Double)>()
external CubicSpline2 stroke_to_spline(
  ffi.Pointer<InputPoint> points,
  int count,
  double spatial_tolerance,
  double velocity_threshold,
);

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>> __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

final class Vector2 extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;
}

final class Aabb2 extends ffi.Struct {
  external Vector2 min;

  external Vector2 max;
}

final class Cubic2 extends ffi.Struct {
  external Vector2 p0;

  external Vector2 p1;

  external Vector2 p2;

  external Vector2 p3;
}

final class Polyline2 extends ffi.Struct {
  external ffi.Pointer<Vector2> points;

  @ffi.Size()
  external int count;
}

final class Circle2 extends ffi.Struct {
  external Vector2 center;

  @ffi.Double()
  external double radius;
}

final class Quadratic2 extends ffi.Struct {
  external Vector2 p0;

  external Vector2 p1;

  external Vector2 p2;
}

final class Intersection extends ffi.Struct {
  external Vector2 pt;

  @ffi.Double()
  external double tA;

  @ffi.Double()
  external double tB;
}

final class InputPoint extends ffi.Struct {
  external Vector2 position;

  @ffi.Double()
  external double timestamp_ms;

  @ffi.Double()
  external double pressure;
}

final class CubicSpline2 extends ffi.Struct {
  external ffi.Pointer<Cubic2> cubics;

  @ffi.Size()
  external int count;
}

final class WeightSample extends ffi.Struct {
  @ffi.Double()
  external double arc_length;

  @ffi.Double()
  external double weight;
}

final class SplineWeightProfile extends ffi.Struct {
  external ffi.Pointer<WeightSample> samples;

  @ffi.Size()
  external int count;
}
